# Skills

./: .env.sh  .gitignore  AGENTS.md  README.md  STATE.md  package-lock.json  package.json  pyproject.toml  requirements.lock.txt
.qoder/: README.md  setting.json
.qoder/agents/: hooks-reviewer.md
.qoder/commands/: _template-loader.md  archive-session.md  load-context.md  paradigm-adopt.md  paradigm-init.md  paradigm-sync.md  review-hooks.md  update-state.md
.qoder/notes/: .gitkeep
.qoder/skills/: KnowledgeExtractor.md
.qoderwork/hooks/: auto-lint.sh  knowledge-trigger.sh  log-failure.sh  notify-done.sh  prompt-guard.sh  security-gate.sh
docs/context/: architecture.md  constraints.md
docs/context/adr/: 001-hooks-tier-system.md  002-private-docs-directory.md  003-precompact-hook-workaround.md  004-knowledge-management-dual-layer.md  ADR-TEMPLATE.md
docs/standards/: comment-style.md  git-convention.md  migration-guide.md  workflow.md
skills/: MANIFEST.json
skills/open-claw-starter/: SKILL.md  config.example.json
